--- a/convoexpress-frontend/index.html
+++ b/convoexpress-frontend/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="author" content="Jerome Manset"/>
+    <meta name="description" content="ConvoExpress is an easy-to-use chat app that has basic features. It was created using the MERN stack, which is a combination of popular web development technologies, and includes WebSocket for instant messaging."/>
     <title>ConvoExpress - Chat App</title>
   </head>
   <body>
